Tue Jun 28 15:46:11 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/packet-opendds.h:
        * tools/dissector/packet-opendds.cpp:
        * tools/dissector/packet-repo.h:
        * tools/dissector/packet-repo.cpp:

          Fix for scoreboard error on windows builds.

Tue Jun 28 15:08:46 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/model/Generator.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model/model/GeneratorXMI.xsd:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model/model/XMI.xsd:
        * tools/modeling/validation/modelvalidation/build.properties:
        * tools/modeling/validation/modelvalidation/build.xml:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.bat:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.sh:
        * tools/modeling/validation/modelvalidation/src/java/org/opendds/modeling/validation/OpenDDSModelValidator.java:
        * tools/modeling/validation/modelvalidation/src/xsl/Default.xslt:

          Added support for validation of .codegen files.

Tue Jun 28 14:26:34 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.site:

          svn:ignore only

        * tools/modeling/validation/modelvalidation/build.xml:
        * tools/modeling/validation/modelvalidation/src/java/com/ociweb/xml/util/XMLUtil.java:
        * tools/modeling/validation/modelvalidation/src/java/log4j.xml:
        * tools/modeling/validation/modelvalidation/src/java/org/opendds/modeling/validation/OpenDDSModelValidator.java:
        * tools/modeling/validation/modelvalidation/src/java/org/opendds/modeling/validation/OpenDDSXMISchemaTransformer.java:
        * tools/modeling/validation/modelvalidation/test/src/com/ociweb/xml/util/OpenDDSValidationUtilTest.java:

          Whitespace cleanup only.
