@@ -1,4 +1,4 @@
 usage:  __APPNAME__.sh/.bat
- -d,--dir <arg>    directory of opendds files to validate
- -f,--file <arg>   opendds file(s) to validate
+ -f,--file <arg>   opendds file(s) and/or directory(s) to validate
+ -q,--quiet        suppress output except for error reporting
  -r,--recursive    search directory recursively for opendds files
