@@ -1,3 +1,10 @@
+Tue Jun 28 20:52:44 UTC 2011  Dean Wette  <wette_d@ociweb.com>
+
+        * tools/modeling/validation/modelvalidation/docs/README:
+        * tools/modeling/validation/modelvalidation/src/java/org/opendds/modeling/validation/OpenDDSModelValidator.java:
+
+          Refactor validation tool for better ease of use.
+
 Tue Jun 28 15:46:11 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tools/dissector/packet-opendds.h:
